--- a/packages/rettangoli-ui/src/components/dialog/dialog.view.yaml
+++ b/packages/rettangoli-ui/src/components/dialog/dialog.view.yaml
@@ -21,20 +21,21 @@ events:
     properties: {}
 
 styles:
-  '@keyframes dialog-in':
-    from:
-      opacity: 0
-      transform: scale(0.95)
-    to:
-      opacity: 1
-      transform: scale(1)
+  # '@keyframes dialog-in':
+  #   from:
+  #     opacity: 0
+  #     transform: scale(0.95)
+  #   to:
+  #     opacity: 1
+  #     transform: scale(1)
 
-  '#dialog-container':
-    animation: dialog-in 150ms cubic-bezier(0.16, 1, 0.3, 1)
-    transform-origin: top
+  # '#dialog-container':
+  #   animation: dialog-in 150ms cubic-bezier(0.16, 1, 0.3, 1)
+  #   transform-origin: top
 
 template:
   - $if isOpen:
-    - rtgl-view#dialog-overlay pos=fix cor=full ah=c av=c:
+    - rtgl-view pos=fix cor=full ah=c av=c:
+      - 'rtgl-view#dialog-overlay pos=fix cor=full ah=c av=c bgc=bg op=0.5':
       - rtgl-view#dialog-container pos=fix bw=xs p=lg bgc=bg w=600 br=sm:
         - slot name=content:
