Refactor popover and select components for improved functionality
- Simplified the popover handlers by removing unnecessary state management and directly dispatching events.
- Updated the popover store to streamline state initialization and management.
- Enhanced the select component to handle position state for popover opening and closing.
- Added event listeners for click-overlay events in both popover and select components.
- Created new visual test HTML files for basic popover functionality and specific positioning.
- Removed outdated test files to maintain a clean codebase.

--- a/packages/rettangoli-ui/src/components/popover/popover.view.yaml
+++ b/packages/rettangoli-ui/src/components/popover/popover.view.yaml
@@ -23,6 +23,13 @@ propsSchema:
       default: bottom
     isOpen:
       type: boolean
+    position:
+      type: object
+      properties:
+        x:
+          type: number
+        y:
+          type: number
 
 refs:
   popoverOverlay:
@@ -46,5 +53,5 @@ styles:
 template:
   - $if isOpen:
     - rtgl-view#popoverOverlay pos=fix cor=full:
-    - 'rtgl-view#popoverContainer pos=fix style="left: ${position.x}px; top: ${position.y}px;" id=floatingElement bw=xs p=md bgc=bg':
+    - 'rtgl-view#popoverContainer pos=fix style="left: ${position.x}px; top: ${position.y}px;" id=floatingElement bw=xs p=md bgc=mu':
       - slot name=content:
