similify popover and select (#87)
- Simplified the popover handlers by removing unnecessary state management and directly dispatching events.
- Updated the popover store to streamline state initialization and management.
- Enhanced the select component to handle position state for popover opening and closing.
- Added event listeners for click-overlay events in both popover and select components.
- Created new visual test HTML files for basic popover functionality and specific positioning.
- Removed outdated test files to maintain a clean codebase.

--- a/packages/rettangoli-ui/src/components/select/select.view.yaml
+++ b/packages/rettangoli-ui/src/components/select/select.view.yaml
@@ -7,32 +7,44 @@ propsSchema:
   type: object
   properties:
     options:
-    items:
       type: array
       items:
         type: object
         properties:
           id:
             type: string
-          lalbel:
+          label:
             type: string
           value:
             type: any
+    selectedValue:
+      type: any
+    placeholder:
+      type: string
+    onChange:
+      type: function
 
 refs:
   select-button:
     eventListeners:
       click:
         handler: handleButtonClick
-  popover: {}
-
+  popover:
+    eventListeners:
+      click-overlay:
+        handler: handleClickOptionsPopoverOverlay
+  option-*:
+    eventListeners:
+      click:
+        handler: handleOptionClick
 
 events: {}
 
 template:
-  - rtgl-button#select-button v=ol: Placeholder
-  - rtgl-popover#popover:
-    - rtgl-view wh=300 g=xs slot=content:
+  - rtgl-button#select-button v=ol:
+    - ${selectedLabel}
+  - rtgl-popover#popover .isOpen=isOpen .position=position:
+    - rtgl-view wh=300 g=xs slot=content bgc=background br=md:
       - $for option, i in options:
-        - rtgl-view w=f h-bgc=mu ph=lg pv=md cur=p br=md:
+        - rtgl-view#option-${i} w=f h-bgc=ac ph=lg pv=md cur=p br=md bgc=${option.bgc}:
           - rtgl-text: ${option.label}
