--- a/packages/rettangoli-ui/rettangoli.config.yaml
+++ b/packages/rettangoli-ui/rettangoli.config.yaml
@@ -65,6 +65,9 @@ vt:
         - title: "Sidebar"
           files: "components/sidebar"
           description: "Sidebar component tests"
+        - title: "Dropdown Menu"
+          files: "components/dropdownMenu"
+          description: "Dropdown Menu component tests"
     - title: "Examples"
       type: "groupLabel"
       items:
