dropdown-menu implement click-item event

--- a/packages/rettangoli-ui/src/components/dropdownMenu/dropdownMenu.view.yaml
+++ b/packages/rettangoli-ui/src/components/dropdownMenu/dropdownMenu.view.yaml
@@ -34,8 +34,10 @@ refs:
     eventListeners:
       click-overlay:
         handler: handleClickPopoverOverlay
-
-events: {}
+  option-*:
+    eventListeners:
+      click:
+        handler: handleClickMenuItem
 
 template:
   - rtgl-popover#popover .isOpen=isOpen .position=position:
