improvements on input and dialog

--- a/packages/rettangoli-ui/rettangoli.config.yaml
+++ b/packages/rettangoli-ui/rettangoli.config.yaml
@@ -29,6 +29,12 @@ vt:
         - title: "Input"
           files: "primitives/input"
           description: "Input component tests"
+        - title: "Color Picker"
+          files: "primitives/colorPicker"
+          description: "Color picker component tests"
+        - title: "Slider"
+          files: "primitives/slider"
+          description: "Slider component tests"
         - title: "SVG"
           files: "primitives/svg"
           description: "SVG component tests"
