--- a/packages/rettangoli-vt/package.json
+++ b/packages/rettangoli-vt/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rettangoli-vt",
+  "name": "@rettangoli/vt",
   "version": "0.0.1",
   "description": "Rettangoli Visual Testing",
   "type": "module",
