--- a/.github/workflows/publish-fe.yaml
+++ b/.github/workflows/publish-fe.yaml
@@ -1,4 +1,4 @@
-name: Publish package to npm
+name: Publish package @rettangoli/fe to npm
 on:
   push:
     tags:
@@ -29,7 +29,7 @@ jobs:
 
       # Publish to npm
       - name: Publish to npm
-        run: npm publish
+        run: bun publish
         working-directory: ./packages/rettangoli-fe
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
