--- a/packages/rettangoli-cli/package.json
+++ b/packages/rettangoli-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rtgl",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "CLI tool for Rettangoli - A frontend framework and development toolkit",
   "type": "module",
   "bin": {
@@ -47,8 +47,8 @@
   "dependencies": {
     "commander": "^14.0.0",
     "js-yaml": "^4.1.0",
-    "rettangoli-fe": "workspace:*",
-    "rettangoli-sites": "workspace:*",
-    "rettangoli-vt": "workspace:*"
+    "@rettangoli/fe": "workspace:*",
+    "@rettangoli/sites": "workspace:*",
+    "@rettangoli/vt": "workspace:*"
   }
 }
