--- a/packages/rettangoli-sites/package.json
+++ b/packages/rettangoli-sites/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "rettangoli-sites",
-  "version": "0.1.0-rc2",
+  "name": "@rettangoli/sites",
+  "version": "0.1.0",
   "description": "Generate static sites using Markdown and YAML. Straightforward, zero-complexity. Complete toolkit for landing pages, blogs, documentation, admin dashboards, and more.git remote add origin git@github.com:yuusoft-org/sitic.git",
   "author": {
     "name": "Luciano Hanyon Wu",
