--- a/packages/rettangoli-ui/package.json
+++ b/packages/rettangoli-ui/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "rettangoli-ui",
-  "version": "0.1.0-rc8",
+  "name": "@rettangoli/ui",
+  "version": "0.1.0",
   "description": "A UI component library for building web interfaces.",
   "main": "dist/rettangoli-esm.min.js",
   "type": "module",
@@ -47,7 +47,7 @@
     "commander": "^13.1.0",
     "js-yaml": "^4.1.0",
     "liquidjs": "^10.21.0",
-    "rettangoli-fe": "workspace:*",
+    "@rettangoli/fe": "workspace:*",
     "snabbdom": "^3.6.2"
   }
 }
