--- a/packages/rettangoli-cli/package.json
+++ b/packages/rettangoli-cli/package.json
@@ -47,8 +47,8 @@
   "dependencies": {
     "commander": "^14.0.0",
     "js-yaml": "^4.1.0",
-    "@rettangoli/fe": "workspace:*",
-    "@rettangoli/sites": "workspace:*",
-    "@rettangoli/vt": "workspace:*"
+    "@rettangoli/fe": "0.0.3",
+    "@rettangoli/sites": "0.1.0",
+    "@rettangoli/vt": "0.0.1"
   }
 }
