--- a/packages/rettangoli-cli/package.json
+++ b/packages/rettangoli-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rtgl",
-  "version": "0.0.4",
+  "version": "0.0.8",
   "description": "CLI tool for Rettangoli - A frontend framework and development toolkit",
   "type": "module",
   "bin": {
@@ -47,8 +47,8 @@
   "dependencies": {
     "commander": "^14.0.0",
     "js-yaml": "^4.1.0",
-    "@rettangoli/fe": "workspace:*",
-    "@rettangoli/sites": "workspace:*",
-    "@rettangoli/vt": "workspace:*"
+    "@rettangoli/fe": "0.0.5",
+    "@rettangoli/sites": "0.1.0",
+    "@rettangoli/vt": "0.0.1"
   }
 }
