--- a/.github/workflows/publish-fe.yaml
+++ b/.github/workflows/publish-fe.yaml
@@ -32,4 +32,4 @@ jobs:
         run: bun publish
         working-directory: ./packages/rettangoli-fe
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
+          NPM_CONFIG_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
