--- a/packages/rettangoli-vt/package.json
+++ b/packages/rettangoli-vt/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rettangoli/vt",
-  "version": "0.0.1",
+  "version": "0.0.2-rc1",
   "description": "Rettangoli Visual Testing",
   "type": "module",
   "main": "./src/index.js",
