--- a/packages/rettangoli-fe/package.json
+++ b/packages/rettangoli-fe/package.json
@@ -1,10 +1,16 @@
 {
   "name": "@rettangoli/fe",
-  "version": "0.0.7-rc2",
+  "version": "0.0.7-rc3",
   "description": "Frontend framework for building reactive web components",
   "type": "module",
   "main": "./src/index.js",
-  "keywords": ["frontend", "reactive", "components", "web", "framework"],
+  "keywords": [
+    "frontend",
+    "reactive",
+    "components",
+    "web",
+    "framework"
+  ],
   "files": [
     "src",
     "README.md",
