--- a/.github/workflows/release-site.yaml
+++ b/.github/workflows/release-site.yaml
@@ -38,9 +38,13 @@ jobs:
       - name: Install Dependencies
         run: bun install --frozen-lockfile
 
+      # Install rtgl CLI globally
+      - name: Install rtgl CLI
+        run: npm i -g rtgl
+
       - name: Build
         working-directory: ./apps/rettangoli.dev
-        run: bun run ../../packages/rettangoli-cli/cli.js sites build
+        run: bun run build
 
       - name: Upload Build Artifacts
         uses: actions/upload-artifact@v4
