fix input onchange event

--- a/packages/rettangoli-ui/src/components/form/form.view.yaml
+++ b/packages/rettangoli-ui/src/components/form/form.view.yaml
@@ -132,7 +132,7 @@ refs:
         handler: handleActionClick
   input-*:
     eventListeners:
-      input-keydown:
+      input-change:
         handler: handleInputChange
   select-*:
     eventListeners:
