--- a/packages/rettangoli-fe/package.json
+++ b/packages/rettangoli-fe/package.json
@@ -29,7 +29,7 @@
   "dependencies": {
     "esbuild": "^0.25.5",
     "immer": "^10.1.1",
-    "jempl": "^0.0.6",
+    "jempl": "0.1.0-rc1",
     "js-yaml": "^4.1.0",
     "rxjs": "^7.8.2",
     "snabbdom": "^3.6.2",
