--- a/packages/rettangoli-ui/src/components/form/form.view.yaml
+++ b/packages/rettangoli-ui/src/components/form/form.view.yaml
@@ -147,7 +147,8 @@ refs:
       slider-change:
         handler: handleSliderChange
 
-events: {}
+events:
+  form-change: {}
 
 template:
   - rtgl-view w=f h=f p=md g=lg ${containerAttrString}:
