--- a/packages/rettangoli-ui/src/components/select/select.view.yaml
+++ b/packages/rettangoli-ui/src/components/select/select.view.yaml
@@ -44,7 +44,7 @@ template:
   - rtgl-button#select-button v=ol:
     - ${selectedLabel}
   - rtgl-popover#popover .isOpen=isOpen .position=position:
-    - rtgl-view wh=300 g=xs slot=content bgc=background br=md:
+    - rtgl-view wh=300 g=xs slot=content bgc=background br=md sv=true:
       - $for option, i in options:
         - rtgl-view#option-${i} w=f h-bgc=ac ph=lg pv=md cur=p br=md bgc=${option.bgc}:
           - rtgl-text: ${option.label}
