feat(cli): build svg

--- a/examples/example1/rettangoli.config.yaml
+++ b/examples/example1/rettangoli.config.yaml
@@ -1,9 +1,15 @@
 # TODO a way to configure dev and prod
 # all rtgl fe configuration
+
+ui:
+  svg:
+    dir: "ui/svg"
+    outfile: "vt/static/public/rtgl-icons.js"
+
 fe:
-   dirs: ['fe/components', 'fe/pages'] # directories that contain components
-   setup: 'fe/setup.js' # path to setup.js file
-   outfile: 'vt/static/public/main.js' # output this is separate from rettangoli file
+  dirs: ["fe/components", "fe/pages"] # directories that contain components
+  setup: "fe/setup.js" # path to setup.js file
+  outfile: "vt/static/public/main.js" # output this is separate from rettangoli file
   #  watchPort: 3001
 
 # all sites configuration
@@ -13,7 +19,7 @@ fe:
 
 # all visual testing configuration
 vt:
-  path: 'vt'
+  path: "vt"
   name: "Example1 Visual Tests"
   description: "Visual testing for example1 project"
   sections:
