--- a/packages/rettangoli-cli/package.json
+++ b/packages/rettangoli-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rtgl",
-  "version": "0.0.11-rc8",
+  "version": "0.0.11-rc9",
   "description": "CLI tool for Rettangoli - A frontend framework and development toolkit",
   "type": "module",
   "bin": {
@@ -49,6 +49,7 @@
     "js-yaml": "^4.1.0",
     "@rettangoli/fe": "workspace:0.0.7-rc6",
     "@rettangoli/sites": "workspace:0.1.1",
-    "@rettangoli/vt": "workspace:0.0.2-rc3"
+    "@rettangoli/vt": "workspace:0.0.2-rc3",
+    "@rettangoli/ui": "workspace:0.1.2-rc9"
   }
 }
