--- a/packages/rettangoli-ui/src/components/sliderInput/sliderInput.view.yaml
+++ b/packages/rettangoli-ui/src/components/sliderInput/sliderInput.view.yaml
@@ -12,9 +12,6 @@ attrsSchema:
     w:
       type: string
       default: ''
-    inputWidth:
-      type: string
-      default: '72'
     min:
       type: string
       default: '0'
@@ -41,5 +38,5 @@ events:
 template:
   - rtgl-view d=h av=c g=md w=${w}:
     - rtgl-slider#slider w=f type=range min=${min} max=${max} step=${step} value=${value}:
-    - rtgl-view w=${inputWidth}:
+    - rtgl-view w=84:
       - rtgl-input#input w=f type=number min=${min} max=${max} step=${step} value=${value}:
