--- a/packages/rettangoli-ui/src/components/sliderInput/sliderInput.view.yaml
+++ b/packages/rettangoli-ui/src/components/sliderInput/sliderInput.view.yaml
@@ -37,5 +37,6 @@ events:
 
 template:
   - rtgl-view d=h av=c g=md w=${w}:
-    - rtgl-slider#slider w=80% type=range min=${min} max=${max} step=${step} value=${value}:
-    - rtgl-input#input w=20% type=number min=${min} max=${max} step=${step} value=${value}:
+    - rtgl-slider#slider w=f type=range min=${min} max=${max} step=${step} value=${value}:
+    - rtgl-view w=84:
+      - rtgl-input#input w=f type=number min=${min} max=${max} step=${step} value=${value}:
