re-implement rtgl-popover to use native html <popover> tag

--- a/packages/rettangoli-ui/rettangoli.config.yaml
+++ b/packages/rettangoli-ui/rettangoli.config.yaml
@@ -54,15 +54,18 @@ vt:
         - title: "View"
           files: "primitives/view"
           description: "View component tests"
+        - title: "Dialog"
+          files: "primitives/dialog"
+          description: "Dialog component tests"
+        - title: "Popover"
+          files: "primitives/popover"
+          description: "Popover component tests"
     - title: "Components"
       type: "groupLabel"
       items:
         - title: "Select"
           files: "components/select"
           description: "Select component tests"
-        - title: "Dialog"
-          files: "components/dialog"
-          description: "Dialog component tests"
         - title: "Form"
           files: "components/form"
           description: "Form component tests"
@@ -72,9 +75,6 @@ vt:
         - title: "Page Outline"
           files: "components/page-outline"
           description: "Page outline component tests"
-        - title: "Popover"
-          files: "components/popover"
-          description: "Popover component tests"
         - title: "Sidebar"
           files: "components/sidebar"
           description: "Sidebar component tests"
