fix(ui): fix close rtgl-select popover

--- a/packages/rettangoli-ui/src/components/select/select.view.yaml
+++ b/packages/rettangoli-ui/src/components/select/select.view.yaml
@@ -31,7 +31,7 @@ refs:
         handler: handleButtonClick
   popover:
     eventListeners:
-      click-overlay:
+      close:
         handler: handleClickOptionsPopoverOverlay
   option-*:
     eventListeners:
