--- a/packages/rettangoli-ui/src/components/form/form.view.yaml
+++ b/packages/rettangoli-ui/src/components/form/form.view.yaml
@@ -132,6 +132,27 @@ propsSchema:
                   - label
                   - inputType
                 additionalProperties: false
+              - type: object
+                properties:
+                  name:
+                    type: string
+                  label:
+                    type: string
+                  description:
+                    type: string
+                  inputType:
+                    const: image
+                  width:
+                    type: number
+                  height:
+                    type: number
+                  placeholder:
+                    type: string
+                required:
+                  - name
+                  - label
+                  - inputType
+                additionalProperties: false
         actions:
           type: object
           properties:
@@ -147,6 +168,8 @@ propsSchema:
                 required:
                   - id
                   - content
+    fieldResources:
+      type: object
 
 refs:
   action-*:
@@ -173,9 +196,14 @@ refs:
     eventListeners:
       slider-input-value-change:
         handler: handleSliderInputChange
+  image-*:
+    eventListeners:
+      click:
+        handler: handleImageClick
 
 events:
   form-change: {}
+  extra-event: {}
 
 template:
   - rtgl-view w=f h=f p=md g=lg ${containerAttrString}:
@@ -198,6 +226,11 @@ template:
                 - rtgl-slider#slider-${field.name} w=f min=${field.min} max=${field.max} step=${field.step} value=${field.defaultValue}:
             - $if field.inputType == "slider-input":
                 - rtgl-slider-input#slider-input-${field.name} w=f min=${field.min} max=${field.max} step=${field.step} defaultValue=${field.defaultValue}:
+            - $if field.inputType == "image" && field.imageSrc:
+                - rtgl-image#image-${field.name} src=${field.imageSrc} w=${field.width} h=${field.height} cur=p:
+            - $if field.inputType == "image" && !field.imageSrc:
+                - rtgl-view#image-${field.name} w=${field.width} h=${field.height} bc=ac bw=sm ah=c av=c cur=p:
+                    - rtgl-text c=mu-fg: ${field.placeholderText}
     - rtgl-view g=sm w=f:
       - rtgl-view d=h ah=e g=sm w=f:
         - $for button, i in actions.buttons:
