--- a/packages/rettangoli-ui/rettangoli.config.yaml
+++ b/packages/rettangoli-ui/rettangoli.config.yaml
@@ -96,6 +96,9 @@ vt:
         - title: "Popover Input"
           files: "components/popover-input"
           description: "Popover Input component tests"
+        - title: "Waveform"
+          files: "components/waveform"
+          description: "Waveform component tests"
     - title: "Examples"
       type: "groupLabel"
       items:
