--- a/packages/rettangoli-ui/src/components/form/form.view.yaml
+++ b/packages/rettangoli-ui/src/components/form/form.view.yaml
@@ -153,6 +153,27 @@ propsSchema:
                   - label
                   - inputType
                 additionalProperties: false
+              - type: object
+                properties:
+                  name:
+                    type: string
+                  label:
+                    type: string
+                  description:
+                    type: string
+                  inputType:
+                    const: waveform
+                  width:
+                    type: number
+                  height:
+                    type: number
+                  placeholder:
+                    type: string
+                required:
+                  - name
+                  - label
+                  - inputType
+                additionalProperties: false
         actions:
           type: object
           properties:
@@ -200,6 +221,10 @@ refs:
     eventListeners:
       click:
         handler: handleImageClick
+  waveform-*:
+    eventListeners:
+      click:
+        handler: handleWaveformClick
   popover-input-*:
     eventListeners:
       input-change:
@@ -238,6 +263,11 @@ template:
                 - rtgl-image#image-${field.name} src=${field.imageSrc} w=${field.width} h=${field.height} cur=p:
             - $if field.inputType == "image" && !field.imageSrc:
                 - rtgl-view#image-${field.name} w=${field.width} h=${field.height} bc=ac bw=sm ah=c av=c cur=p p=md:
+                    - rtgl-text c=mu-fg ta=c: ${field.placeholderText}
+            - $if field.inputType == "waveform" && field.waveformData:
+                - rtgl-waveform#waveform-${field.name} .waveformData=fields[${i}].waveformData w=${field.width} h=${field.height}:
+            - $if field.inputType == "waveform" && !field.waveformData:
+                - rtgl-view#waveform-${field.name} w=${field.width} h=${field.height} bc=ac bw=sm ah=c av=c cur=p p=md:
                     - rtgl-text c=mu-fg ta=c: ${field.placeholderText}
     - rtgl-view g=sm w=f:
       - rtgl-view d=h ah=e g=sm w=f:
